--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,4 +31,4 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: build
-          remote-dir: /recruitgpt.sphyzee.com/fe-react  
+          remote-dir: /recruitgpt.sphyzee.com/fe-react/  
