--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,5 @@ jobs:
           server: ftp.dataviolet.com
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: build
-          remote-dir: /recruitgpt.sphyzee.com/fe-react/  
+          local-dir: ./build/
+          remote-dir: /recruitgpt.sphyzee.com/fe-react 
